新增环境细度控制功能